--- a/user-login-server/src/main/resources/static/index.html
+++ b/user-login-server/src/main/resources/static/index.html
@@ -6,7 +6,8 @@
   <base href="/">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <!--<link href="favicon.ico" rel="icon" type="image/x-icon">-->
+  <link href="style.css" rel="stylesheet">
   <link href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
