--- a/user-login-ui/src/index.html
+++ b/user-login-ui/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!--<link href="favicon.ico" rel="icon" type="image/x-icon">-->
-  <link href="style.css" rel="stylesheet">
+  <!--<link href="styles.css" rel="stylesheet">-->
   <link href="https://unpkg.com/bootstrap@3.3.7/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" rel="stylesheet">
 </head>
